# Flicqr

./: CMakeLists.txt
src/: CMakeLists.txt  flickrapi.cpp  flickrapi.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  photo.h  photoset.cpp  photoset.h  photosetsmodel.cpp  photosetsmodel.h  settings.cpp  settings.h
